# PyDo

./: .env-example  azure-pipelines.yml  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 4917cec0b456_added_todo_list_and_relationship_.py  57672ef7848e_added_todo_table.py  9edf8ca5a3c5_make_list_id_not_nullable.py  c6a42e8abb37_added_priority_field.py  f3f49eb28ea7_make_list_id_not_nullable.py
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 84f4d233c282_added_todo_table2.py
app/domain/business/: list_business.py  todo_business.py
app/domain/models/: __init__.py  list.py  todo.py
app/infra/db/: database.py
app/infra/db/entities/: __init__.py  list_entity.py  todo_entity.py
app/infra/db/repositories/: list_repository.py  todo_repository.py
app/routes/: list_routes.py  routes.py  todo_routes.py
